# Label_Change_Tool

./: README.md  main.py  pyproject.toml
Label_Controller/: controller_label_change.py
Label_Model/: Model_labels_change.py  change_label_progarm.py
Label_View/: View_Labels_Change.py  View_Labels_Change.ui  View_Labels_Change_back.py
config/: config.ini
doc/: readme.md
logger/: log.txt  logging_utils.py
