[tool.poetry]
name = "label-change-tool"
version = "0.1.0"
description = "标注转换工具"
authors = ["极客小方 <GeekFong@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyqt5 = "^5.15.9"
qt-material = "^2.14"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
